new-vector-tests.user.css
/* ==UserStyle==
@name        Wikim V.2022 tests
@namespace   StylishThemes
@version     1.0.26
@homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
@updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-tests.user.css
@license     CC-BY-SA-4.0
@author      quiddity-wp and eccenux
==/UserStyle== */
@-moz-document domain("wikipedia.org"),
domain("meta.wikimedia.org"),
domain("office.wikimedia.org"),
domain("commons.wikimedia.org"),
domain("species.wikimedia.org"),
domain("outreach.wikimedia.org"),
domain("wikimania.wikimedia.org"),
domain("foundation.wikimedia.org"),
domain("wikitech.wikimedia.org"),
domain("wiktionary.org"),
domain("mediawiki.org"),
domain("wikisource.org"),
domain("wikivoyage.org"),
domain("wikibooks.org"),
domain("wikinews.org"),
domain("wikiversity.org"),
domain("wikiquote.org"),
domain("wikidata.org"),
domain("beta.wmflabs.org"),
domain("wikifunctions.org") {
  /* NOTE: this assumes you are using Left-to-Right languages in NEW VECTOR ([[mw:Desktop Improvements]] beta) */

  /* contribs icon */
  #pt-contribs > a {
  background: url(/w/load.php?modules=oojs-ui.styles.icons-user&image=userContributions&format=original) no-repeat;
  background-size: 17px;
  padding: 10px;
  max-width: 22px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
  
  #pt-contribs {margin-top: -5px;}
  
  .vector-sticky-header-end {
    display: none !important;
  }
  
  .vector-page-toolbar {
    position: fixed;
    right: 10px;
    top: 55px;
    background-color: white;
    z-index: 400;
  }
  
  #left-navigation {
    padding-right: 10px
  }
 
  @media screen {
    #bodyContent {
    margin-top: 25px !important;
    }
  }

/* nudge content further */
html {
  scroll-padding-top: 90px !important;
}

/* Always show it */  
@media screen and (min-width: 300px) {
  .vector-page-toolbar-container .mw-portlet-views:not(.emptyPortlet) {
  display: block;
 }
}

/* Shorten it */
#right-navigation {
  height: 22px;
}
.vector-page-toolbar-container {
  font-size: 0.8em
}
.vector-page-tools-landmark, .vector-menu-dropdown-noicon, #p-page, #p-user {
  margin-top: -3px !important;
}
.mw-ui-icon-small.mw-ui-icon-element {
  padding: 0;
}

/* Hack to reduce visibility of languages button */
.mw-ui-icon-wikimedia-language-progressive, #p-lang-btn-label > .vector-menu-heading-label {
  opacity: 0.3 !important;
  }

#bodyContent {
  margin-top: 15px !important;
}

/* Replace toolbar text with icons */
#ca-nstab-main > a, #ca-nstab-user > a, #ca-nstab-media > a, #ca-nstab-special > a, #ca-nstab-project > a, #ca-nstab-image > a, #ca-nstab-mediawiki > a, #ca-nstab-template > a, #ca-nstab-help > a, #ca-nstab-category > a, #ca-nstab-manual > a, #ca-nstab-extension > a {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=article&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=article&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px;
  width: 12px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
#ca-nstab-main.new > a, #ca-nstab-user.new > a, #ca-nstab-media.new > a, #ca-nstab-project.new > a, #ca-nstab-image.new > a, #ca-nstab-mediawiki.new > a, #ca-nstab-template.new > a, #ca-nstab-help.new > a, #ca-nstab-category.new > a, #ca-nstab-manual.new > a, #ca-nstab-extension.new > a  {
  background-color: #f77f7f !important;
}
  
#ca-talk > a {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-moderation&image=ongoingConversation&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-moderation&image=ongoingConversation&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px;
  width: 12px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
#ca-talk.empty a {
  background-color: #ff8000 !important;
}
#ca-talk.new a {
  background-color: #f77f7f !important;
}

#ca-addsection {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px;
  font-size: 1px;
  color: white;
  text-decoration: none;  
}

#ca-view {
  display: none;
}

#ca-view-foreign > a {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-wikimedia&image=logoMetaWiki&format=original)  no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-wikimedia&image=logoMetaWiki&format=original) no-repeat 0 0/15px;
  background-color: #26ae45;
  padding: 10px;
  width: 10px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
  
#ca-ve-edit > a {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=edit&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=edit&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px;
  width: 12px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
#ca-edit > a {
  -webkit-mask: url(g/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=wikiText&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=wikiText&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px 10px;
  width: 15px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
  
#ca-viewsource > a {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=editLock&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=editLock&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px;
  width: 12px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
  
#ca-history > a {
  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px;
  mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px;
  background-color: black;
  padding: 10px;
  width: 12px;
  font-size: 1px;
  color: white;
  text-decoration: none;
}
}

